public/setup/css/setup.css
/* ... */
.steps-container .row{
    text-align: center;
    position: relative;
}
.steps-container .steps .number-cont{
    width: 33.333%;
    float: left;
}
.steps-container .steps .line{
    height: 2px;
    width: 60%;
    background: #932E2A;
    position: absolute;
    top: 50px;
    left: 50%;
    z-index: -1;

    transform: translate(-50%,-50%);
    -webkit-transform: translate(-50%,-50%);
    -moz-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    -o-transform: translate(-50%,-50%);
}
.steps-container .steps .circle-number{
    font-size: 40px;
    height: 90px;
    width: 90px;
    background: #932E2A;
    border-radius: 100%;
    display: inline-block;
    color: #fff;
    text-align: center;
    line-height: 90px;
}
.steps-container .steps p{
    margin-top: 30px;
    font-family: Open sans;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 14px;
}
.setup-button-cont{
    margin-top: 80px;
}
.setup-button-cont > a{
    width: 300px;
    padding: 10px 12px;
    font-size: 21px;
    letter-spacing: 1px;
    word-spacing: 2px;
    font-weight: 600;
    font-family: Open Sans;
}
.setup-button-cont > p{
    margin-top: 50px;
}
.setup-p0,
.setup-p0 .setup-button-cont{
    margin-top: 100px;
}


/* PAGE 1.3 ---- Environments */
.setup-p1-3 .add-environment a{
    padding: 6px 14px;
}
.setup-p1-3 .add-environment a i{
    padding-right: 10px;
}
.setup-p1-3 .add-environment-container{
    margin-top: 30px;
    padding: 0px 0px 0px 20px;
}
.setup-p1-3 .add-environment-container .environment-cont{
    /* border-top: 5px solid #eaeaea;
    padding: 20px 0 10px; */
}
.setup-p1-3 .add-environment-container .environment-cont:first-child{
    /* padding-top: 0; */
    border-top: none;
}
.setup-p1-3 default-environment{
    padding: 0 20px;
}
.setup-p1-3 .add-environment-container .environment-cont a.btn-danger{
    padding: 0 12px;
    float: right;
    position: relative;
    top: -4px;
    display: none;
}
.setup-p1-3 .add-environment-container .environment-cont:hover a.btn-danger{
    display: block;
}


/* PAGE 6 ---- STEP 2: Database Connection */
.setup-p2 .setup-right-content{
    padding: 10px 15% 0;
}
.setup-p2 .setup-info-message{
    margin-top: 20px;
    font-size: 14px;
}
.setup-p2 .setup-info-message span{
    position: relative;
    padding-left: 35px;
    display: block;
}
.setup-p2 .setup-info-message i{
    font-size: 20px;
    position: absolute;
    left: 0;
    top: 0;
}
#frmSelModules input[type='checkbox']{
    margin-left: -15px;
}
#frmSelModules .cb-cont .cbmask-outer{
    top: 12px;
}
#frmSelModules .module-name{
    font-size: 14px;
    padding-left: 10px;
}
#frmSelModules .radio, .checkbox{
    padding: 10px 10px 0 0;
    margin: 0;
}

#frmSelector input[type='checkbox']{
    margin-left: -15px;
}
#frmSelector .cb-cont .cbmask-outer{
    top: 12px;
}
#frmSelector .module-name{
    font-size: 14px;
    padding-left: 10px;
}
#frmSelector .radio, .checkbox{
    padding: 10px 10px 0 0;
    margin: 0;
}




/* PAGE 7 ---- STEP 3: Melis Platform Initialization */
.setup-p1-3 h4,
.setup-p3 h4,
.setup-p2 h4{
    margin-top: 20px;
    padding: 20px 0;
}
.setup-p3 .setup-button-cont{
    margin-top: 30px;
}


/* final modal */
.setup-modal-overlay {
    position: fixed;
    height: 100%;
    width: 100%;
    background: #000;
    top: 0;
    left: 0;
    opacity: .5;
    z-index: 99991;
    display: none;
}
.setup-final-modal{
    position: fixed;
    top: 50%;
    left: 50%;
    z-index: 99992;
    transform: translate(-50%,-50%);
    -webkit-transform: translate(-50%,-50%);
    -moz-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    -o-transform: translate(-50%,-50%);
    display: none;
}
.setup-final-modal .modal-content {
    padding: 50px 20px 40px;
    width: 300px;
}
.setup-final-modal .modal-content span.btn-primary{
    margin-top: 40px;
    display: block;
}
.setup-final-modal .delete-page-modal{
    text-align: center;
}
.setup-final-modal .delete-page-modal span.btn,
.setup-final-modal .delete-page-modal button{
    width: 160px;
    margin: 0 10px;
}
.setup-final-modal .modal-content h3,
.setup-final-modal .modal-content h4{
    margin-bottom: 30px;
    margin-top: 0;
}
.setup-final-modal .modal-content p{
    margin-bottom: 4px;
}

.setup-final-modal .modal-content{
    width: 450px;
}
.setup-final-modal .overlay-loader{
    background: #fff;
    text-align: center;
    border-radius: 3px;
}
.setup-final-modal .overlay-loader span{
    padding: 0px 0 0px 20px;
    display: inline-block;
    position: relative;
    top: 19px;
    font-size: 16px;
}
.setup-final-modal .overlay-loader .loader-icon{
    margin: 34px 0 0 0;
    position: static;
    vertical-align: middle;
}

.setup-label-info{
    display: block;
    font-size: 12px;
    color: #3a3838;
}

.melis-install-adv-prop-trigger{
    color: #626262;
    cursor: pointer;
}

.melis-install-adv-prop-content{
    display: none;
}

.setup-content i.fa-info-circle{
    position: inherit;
    opacity: 1;
    font-size: 17px;
    color: #4c4c4c;
}

.form-group > label:first-of-type{
    display: block;
}

.form-group .tooltip.left .tooltip-arrow, .checkbox .tooltip.left .tooltip-arrow {
    border-left-color: #932e2a;
}

.form-group i.fa-info-circle + .tooltip .tooltip-inner {
    letter-spacing: 0.1px;
    padding: 6px 10px;
    border-radius: 2px;
}

.advance-prop{
    margin-bottom: 16px;
    border-width: 2px;
    border-color: #EAEAEA;
    margin-top: 0;
    line-height: 7px;
}

.add-environment-container .environment-cont {
    background: #f2f2f2;
    padding: 20px 10px;
    border-radius: 5px;
    margin-bottom: 25px;
}

.setup-content .list-group-item{
    padding: 20px;
}

.font-awesome-radio-container{
    padding-left: 10px;
    padding-right: 15px;
}

/*** custom checkboxes ***/
.font-awesome-radio {
    display:none;
}
/* ... */

